--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>Welcome to github class</h1>
 <h2>we are learning git push and pull commands</h2>
 
-welcome my page
+Welcome my page
+
+
+hello alll how are ytou 
+
